implemented comments feature
